test/testdata/variables/undefined_access_error_global_declared_after_function_declaration.lox
fun f() {
    print a; // error: a has not been defined
}

var a;
f();
